# ctcityscraper

./: .dockerignore  .gitignore  Dockerfile  README.md  SCRAPER_DEVELOPMENT.md  Scratch.ipynb  Untitled.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  scrape.py  scraper.py  scraping.py  test_parallel_scraper.py  test_property.py  test_robustness.py  vgsi_cities.json  vgsi_cities_ct.json
schema/: property_objects.py
scrapers/: __init__.py
scrapers/ct_data/: source.py
scrapers/llc_ct_data/: __init__.py  source.py
scrapers/vgsi/: __init__.py  source.py
scripts/: load_cities.py  scrape_city.py
src/engine/: __init__.py  base.py  database.py  engine.py  hash.py
src/vgsi/: __init__.py  database.py  parallel.py  scraper.py
tests/: README.md  __init__.py  test_ct_data.py  test_database.py  test_engine.py  test_llc_ct_data.py  test_parallel.py  test_scraper.py
