[project]
name = "ctcityscraper"
version = "0.1.0"
description = "A scraper script to scrape property data from cities and towns in CT."
authors = [
    {name = "Carlos Preising"}
]
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "requests>=2.28.2",
    "urllib3>=1.26.14",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "ipython>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
