[project]
name = "ctcityscraper"
version = "0.2.1"
description = "A scraper script to scrape property data from cities and towns in CT."
authors = [
    {name = "Carlos Preising"}
]
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "requests>=2.28.2",
    "urllib3>=1.26.14",
    "duckdb>=0.10.0",
    "tqdm>=4.65.0",
]

[project.scripts]
scrape-city = "scripts.scrape_city:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]

analysis = [
    "jupyter>=1.1.1",
    "ipython>=8.0.0",
    "pandas >= 2.3.3"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
