[project]
name = "ctcityscraper"
version = "0.2.1"
description = "A scraper script to scrape property data from cities and towns in CT."
authors = [
    {name = "Carlos Preising"}
]
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "requests>=2.28.2",
    "urllib3>=1.26.14",
    "duckdb>=0.10.0",
    "tqdm>=4.65.0",
    "curl_cffi>=0.7.0",
    "pyarrow>=23.0.1",
    "pandas>=3.0.0",
]

[project.scripts]
scrape = "scrape:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ty>=0.0.18",
]

analysis = [
    "jupyter>=1.1.1",
    "ipython>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "scrapers"]

[tool.ty.environment]
python = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
